# kirin

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  Ion.toml  issues.md  kirin.code-workspace  main.mlir  main2.py  mkdocs.yml  output.jl  prek.toml  pyproject.toml  versions.json
crates/kirin-arith/: Cargo.toml
crates/kirin-arith/src/: checked_ops.rs  interpret_impl.rs  interpreter.rs  interpreter_new.rs  lib.rs
crates/kirin-arith/tests/: arith.rs  function_roundtrip.rs
crates/kirin-bitwise/: Cargo.toml
crates/kirin-bitwise/src/: checked_ops.rs  interpret_impl.rs  interpreter.rs  interpreter_new.rs  lib.rs  tests.rs
crates/kirin-bitwise/tests/: bitwise.rs  function_roundtrip.rs
crates/kirin-cf/: Cargo.toml
crates/kirin-cf/src/: interpret_impl.rs  interpreter.rs  interpreter_new.rs  lib.rs  tests.rs
crates/kirin-chumsky/: Cargo.toml  example.mlir
crates/kirin-chumsky-derive/: Cargo.toml
crates/kirin-chumsky-derive-old/: Cargo.toml  README.md
crates/kirin-chumsky-derive-old/src/: lib.rs
crates/kirin-chumsky-derive-old/tests/: parser.rs
crates/kirin-chumsky-derive/src/: lib.rs
crates/kirin-chumsky-derive/tests/: block_region_lang.rs  combined_lang.rs  common.rs  comptime_value_derive.rs  control_flow_lang.rs  emit_ir.rs  forward_block_ref.rs  integration.rs  pretty_print.rs  test_lang.rs  tuple_lang.rs  unary_lang.rs  value_lang.rs
crates/kirin-chumsky-format/: Cargo.toml
crates/kirin-chumsky-format-old/: Cargo.toml
crates/kirin-chumsky-format-old/src/: attrs.rs  lib.rs  parse.rs
crates/kirin-chumsky-format/src/: ast.rs  attrs.rs  field_kind.rs  format.rs  generate.rs  generics.rs  input.rs  lib.rs  parse.rs  visitor.rs
crates/kirin-chumsky-old/: Cargo.toml  README.md
crates/kirin-chumsky-old/src/: ast.rs  lib.rs  parsers.rs  tests.rs  traits.rs
crates/kirin-chumsky/src/: ast.rs  builtins.rs  lexer.rs  lib.rs  parser.old.rs  parser.rs  parsers.rs  tests.rs  traits.rs
crates/kirin-cmp/: Cargo.toml
crates/kirin-cmp/src/: interpret_impl.rs  interpreter.rs  interpreter_new.rs  lib.rs  liveness.rs  tests.rs  typeinfer.rs  value.rs
crates/kirin-constant/: Cargo.toml
crates/kirin-constant/src/: interpret_impl.rs  interpreter.rs  interpreter_new.rs  lib.rs  tests.rs
crates/kirin-constprop/: Cargo.toml
crates/kirin-constprop/src/: analyzer.rs  context.rs  default_semantics.rs  lib.rs  shell.rs  summary.rs
crates/kirin-dataflow/: Cargo.toml
crates/kirin-dataflow/src/: error.rs  lib.rs  live_set.rs  op.rs  result.rs  solver.rs  tests.rs
crates/kirin-derive/: Cargo.toml
crates/kirin-derive-chumsky/: Cargo.toml
crates/kirin-derive-chumsky/src/: attrs.rs  field_kind.rs  format.rs  generics.rs  input.rs  lib.rs  validation.rs  visitor.rs
crates/kirin-derive-core/: Cargo.toml  README.md
crates/kirin-derive-core-2/: Cargo.toml
crates/kirin-derive-core-2/src/: emit.rs  lib.rs  misc.rs  scan.rs  test_util.rs  utils.rs
crates/kirin-derive-core-old/: Cargo.toml
crates/kirin-derive-core-old/src/: debug.rs  lib.rs  misc.rs
crates/kirin-derive-core/src/: builder.old.rs  check.rs  codegen.rs  derive.rs  dialect.rs  emit.rs  empty.rs  field.rs  field_mut.rs  from.old.rs  from.rs  lib.rs  misc.rs  name.rs  scan.rs  stage.rs  tests.rs  traits.rs  utils.rs
crates/kirin-derive-dialect/: Cargo.toml
crates/kirin-derive-dialect/src/: common.rs  lib.rs  marker.rs  stage_info.rs
crates/kirin-derive-interpreter/: Cargo.toml
crates/kirin-derive-interpreter/src/: frame.rs  function_entry.rs  interp_dispatch.rs  interpretable.rs  lib.rs  pattern.rs  stage_frame.rs
crates/kirin-derive/src/: fields.rs  lib.rs
crates/kirin-derive/tests/: dialect_properties.rs  enum_dialect.rs  integration.rs  struct_dialect.rs  vec_fields.rs
crates/kirin-function/: Cargo.toml
crates/kirin-function/src/: bind.rs  body.rs  call.rs  interpret_impl.rs  interpreter.rs  interpreter_new.rs  lambda.rs  lib.rs  ret.rs  tests.rs
crates/kirin-function/tests/: function_roundtrip.rs  lambda_print.rs
crates/kirin-interpreter/: Cargo.toml
crates/kirin-interpreter-2/: Cargo.toml
crates/kirin-interpreter-2/src/: branch_condition.rs  breakpoint_control.rs  control.rs  cursor.rs  effect.rs  error.rs  frame.rs  frame_stack.rs  from_constant.rs  fuel_control.rs  interpretable.rs  interpreter.rs  interrupt_control.rs  lib.rs  lift.rs  machine.rs  product_value.rs  projection.rs  result.rs  seed.rs  single_stage.rs  stage_access.rs  total.rs  value_store.rs
crates/kirin-interpreter-4/: Cargo.toml
crates/kirin-interpreter-4/src/: concrete.rs  cursor.rs  effect.rs  execute.rs  frame.rs  frame_stack.rs  lib.rs  lift.rs  traits.rs
crates/kirin-interpreter-4/tests/: multi_stage.rs  single_stage.rs
crates/kirin-interpreter-new/: Cargo.toml
crates/kirin-interpreter-new/src/: concrete.rs  dispatch.rs  effect.rs  env.rs  error.rs  frame.rs  lib.rs  macros.rs  value.rs
crates/kirin-interpreter/src/: abstract_frame.rs  abstract_interp.rs  block_eval.rs  call.rs  call_semantics.rs  concrete.rs  concrete_frame.rs  concrete_frames.rs  concrete_interp.rs  control.rs  ctx.rs  dispatch.rs  effect.rs  env.rs  error.rs  ext.rs  forward_abstract_frames.rs  forward_abstract_interp.rs  frame.rs  frame_stack.rs  interp.rs  interpretable.rs  interpreter.rs  lib.rs  linker.rs  location.rs  macros.rs  product_value.rs  profile.rs  query.rs  result.rs  scheduler.rs  stack.rs  stage.rs  stage_access.rs  value.rs  value_store.rs  widening.rs
crates/kirin-interpreter/tests/: abstract_fixpoint.rs  abstract_gaps.rs  abstract_interp.rs  concrete_interp.rs  derive_call_semantics.rs  derive_interpretable.rs  derive_macros.rs  error_paths.rs  interval_domain.rs  runtime_kernel.rs  stack_interp.rs  stage_dispatch.rs  stage_dynamic_dispatch.rs  test_dialect_coverage.rs
crates/kirin-interval/: Cargo.toml
crates/kirin-interval/src/: lib.rs
crates/kirin-ir/: Cargo.toml
crates/kirin-ir/fuzz/: Cargo.toml
crates/kirin-prettyless/: Cargo.toml  README.md
crates/kirin-py-frontend/: .gitignore  Cargo.toml  README.md  pyproject.toml
(+40936 files in other folders)
