[package]
name = "kirin"
version = "0.1.0"
edition = "2024"

[dependencies]
kirin-ir = { version = "0.1.0", path = "crates/kirin-ir" }
kirin-prettyless = { version = "0.1.0", path = "crates/kirin-prettyless" }
kirin-chumsky = { version = "0.1.0", path = "crates/kirin-chumsky", features = ["derive"] }
serde = { version = "1.0.228", optional = true }

# Re-export dependencies needed by derive macros
chumsky = "0.10"
kirin-lexer = { version = "0.1.0", path = "crates/kirin-lexer" }

[features]
serde = ["dep:serde"]

[workspace]
resolver = "2"
members = [
    "crates/kirin-cf",
    "crates/kirin-constant",
    "crates/kirin-derive",
    "crates/kirin-ir",
    "crates/kirin-prettyless",
    "crates/kirin-scf",
    "crates/kirin-test-utils",
    "crates/kirin-lexer",
    "crates/kirin-derive-core",
    "crates/kirin-derive-dialect",
    "crates/kirin-chumsky",
    "crates/kirin-chumsky-format",
    "crates/kirin-chumsky-derive", "crates/kirin-function",
]

[workspace.dependencies]
# Proc-macro ecosystem - standardized versions
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
darling = "0.23"
manyhow = { version = "0.11", features = ["darling"] }

# Parser ecosystem
chumsky = "0.10"
logos = "0.16"
num-traits = "0.2"

# Testing
insta = "1.46"

# Serialization
serde = "1.0"

# Internal crates
kirin-ir = { version = "0.1.0", path = "crates/kirin-ir" }
kirin-lexer = { version = "0.1.0", path = "crates/kirin-lexer" }
kirin-prettyless = { version = "0.1.0", path = "crates/kirin-prettyless" }
kirin-chumsky = { version = "0.1.0", path = "crates/kirin-chumsky" }
kirin-derive-core = { version = "0.1.0", path = "crates/kirin-derive-core" }
kirin-derive-dialect = { version = "0.1.0", path = "crates/kirin-derive-dialect" }
kirin-derive = { version = "0.1.0", path = "crates/kirin-derive" }
kirin-test-utils = { version = "0.1.0", path = "crates/kirin-test-utils" }
kirin-chumsky-format = { version = "0.1.0", path = "crates/kirin-chumsky-format" }
kirin-chumsky-derive = { version = "0.1.0", path = "crates/kirin-chumsky-derive" }
kirin = { version = "0.1.0", path = "." }
