[package]
name = "kirin"
version = "0.1.0"
edition = "2024"

[dependencies]
kirin-ir = { version = "0.1.0", path = "crates/kirin-ir" }
kirin-prettyless = { version = "0.1.0", path = "crates/kirin-prettyless", features = ["derive"] }
kirin-chumsky = { version = "0.1.0", path = "crates/kirin-chumsky", features = ["derive"] }
kirin-interpreter = { version = "0.1.0", path = "crates/kirin-interpreter", features = ["derive"], optional = true }
serde = { version = "1.0.228", optional = true }

# Re-export dependencies needed by derive macros
chumsky = "0.10"
kirin-lexer = { version = "0.1.0", path = "crates/kirin-lexer" }

[dev-dependencies]
kirin-arith = { workspace = true }
kirin-cf = { workspace = true }
kirin-function = { workspace = true }

[features]
default = ["interpreter"]
interpreter = ["dep:kirin-interpreter"]
serde = ["dep:serde"]

[[example]]
name = "simple"
path = "example/simple.rs"

[workspace]
resolver = "2"
members = [
    "crates/kirin-cf",
    "crates/kirin-constant",
    "crates/kirin-derive",
    "crates/kirin-ir",
    "crates/kirin-prettyless",
    "crates/kirin-scf",
    "crates/kirin-test-utils",
    "crates/kirin-lexer",
    "crates/kirin-derive-core",
    "crates/kirin-derive-dialect",
    "crates/kirin-chumsky",
    "crates/kirin-chumsky-format",
    "crates/kirin-chumsky-derive",
    "crates/kirin-function",
    "xtask",
    "crates/kirin-arith",
    "crates/kirin-bitwise",
    "crates/kirin-prettyless-derive",
    "crates/kirin-interpreter",
    "crates/kirin-derive-interpreter",
    "crates/kirin-test-languages",
    "crates/kirin-interval",
]

[workspace.dependencies]
# Proc-macro ecosystem - standardized versions
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
darling = "0.23"
manyhow = { version = "0.11", features = ["darling"] }

# Parser ecosystem
chumsky = "0.10"
logos = "0.16"
num-traits = "0.2"
strsim = "0.11"

# Testing
insta = "1.46"

# Error handling
thiserror = "2"

# Serialization
serde = "1.0"

# Internal crates
kirin-ir = { version = "0.1.0", path = "crates/kirin-ir" }
kirin-lexer = { version = "0.1.0", path = "crates/kirin-lexer" }
kirin-prettyless = { version = "0.1.0", path = "crates/kirin-prettyless" }
kirin-chumsky = { version = "0.1.0", path = "crates/kirin-chumsky" }
kirin-derive-core = { version = "0.1.0", path = "crates/kirin-derive-core" }
kirin-derive-dialect = { version = "0.1.0", path = "crates/kirin-derive-dialect" }
kirin-derive = { version = "0.1.0", path = "crates/kirin-derive" }
kirin-test-utils = { version = "0.1.0", path = "crates/kirin-test-utils" }
kirin-test-languages = { version = "0.1.0", path = "crates/kirin-test-languages" }
kirin-interval = { version = "0.1.0", path = "crates/kirin-interval" }
kirin-chumsky-format = { version = "0.1.0", path = "crates/kirin-chumsky-format" }
kirin-chumsky-derive = { version = "0.1.0", path = "crates/kirin-chumsky-derive" }
kirin = { version = "0.1.0", path = "." }
kirin-cf = { version = "0.1.0", path = "crates/kirin-cf" }
kirin-constant = { version = "0.1.0", path = "crates/kirin-constant" }
kirin-scf = { version = "0.1.0", path = "crates/kirin-scf" }
kirin-function = { version = "0.1.0", path = "crates/kirin-function" }
kirin-arith = { version = "0.1.0", path = "crates/kirin-arith" }
kirin-bitwise = { version = "0.1.0", path = "crates/kirin-bitwise" }
kirin-prettyless-derive = { version = "0.1.0", path = "crates/kirin-prettyless-derive" }
kirin-interpreter = { version = "0.1.0", path = "crates/kirin-interpreter" }
kirin-derive-interpreter = { version = "0.1.0", path = "crates/kirin-derive-interpreter" }
smallvec = "1.13"
