[package]
name = "kirin-cf"
version = "0.1.0"
edition = "2024"

[dependencies]
kirin.workspace = true
kirin-interpreter = { workspace = true }
# kirin-interpreter-19 = { workspace = true }  # temporarily disabled
smallvec = { workspace = true }

[dev-dependencies]
kirin-test-types = { path = "../kirin-test-types" }
