[package]
name = "kirin-chumsky-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
kirin-chumsky-format = { version = "0.1.0", path = "../kirin-chumsky-format" }
kirin-derive-core = { version = "0.1.0", path = "../kirin-derive-core" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
chumsky = "0.10"
insta = "1.42"
kirin = { version = "0.1.0", path = "../.." }
kirin-chumsky = { version = "0.1.0", path = "../kirin-chumsky" }
kirin-ir = { version = "0.1.0", path = "../kirin-ir", features = ["derive"] }
kirin-lexer = { version = "0.1.0", path = "../kirin-lexer" }
kirin-prettyless = { version = "0.1.0", path = "../kirin-prettyless" }
