[package]
name = "kirin-chumsky-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
kirin-chumsky-format.workspace = true
kirin-derive-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
chumsky.workspace = true
insta.workspace = true
kirin = { version = "0.1.0", path = "../.." }
kirin-chumsky.workspace = true
kirin-ir = { workspace = true, features = ["derive"] }
kirin-lexer.workspace = true
kirin-prettyless.workspace = true
kirin-test-languages = { workspace = true, features = ["parser"] }
kirin-test-utils = { workspace = true, features = ["parser"] }
