[package]
name = "kirin-chumsky-format"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.12.0"
darling = "0.23.0"
indexmap = "2.12.1"
kirin-derive-core-2 = { version = "0.1.0", path = "../kirin-derive-core-2" }
kirin-lexer = { version = "0.1.0", path = "../kirin-lexer", features = ["quote"] }
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = "2.0.113"

[dev-dependencies]
insta = "1.45.0"
kirin-derive-core-2 = { version = "0.1.0", path = "../kirin-derive-core-2" }
