[package]
name = "kirin-chumsky-format"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.12.0"
darling = "0.23.0"
indexmap = "2.12.1"
kirin-derive-core = { version = "0.1.0", path = "../kirin-derive-core" }
kirin-lexer = { version = "0.1.0", path = "../kirin-lexer" }
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"

[dev-dependencies]
insta = "1.45.0"
