[package]
name = "kirin-chumsky-format"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.10"
darling = "0.23"
indexmap = "2.7"
kirin-derive-core-2 = { version = "0.1.0", path = "../kirin-derive-core-2" }
kirin-lexer = { version = "0.1.0", path = "../kirin-lexer", features = ["quote"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
insta = "1.42"
