[package]
name = "kirin-chumsky-format"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky.workspace = true
darling.workspace = true
indexmap = "2.7"
kirin-derive-core.workspace = true
kirin-lexer = { workspace = true, features = ["quote"] }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
insta.workspace = true
kirin-test-utils.workspace = true
