[package]
name = "kirin-chumsky"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
chumsky = "0.11.2"
kirin-ir = { version = "0.1.0", path = "../kirin-ir" }
kirin-lexer = { version = "0.1.0", path = "../kirin-lexer" }
kirin-derive = { version = "0.1.0", path = "../kirin-derive", optional = true }
kirin-chumsky-derive = { version = "0.1.0", path = "../kirin-chumsky-derive", optional = true }
logos = "0.16.0"

[dev-dependencies]
insta = "1.44.3"
kirin-test-utils = { path = "../kirin-test-utils" }

[features]
default = ["derive"]
derive = ["dep:kirin-derive", "dep:kirin-chumsky-derive"]
