[package]
name = "kirin-chumsky"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky.workspace = true
kirin-ir.workspace = true
kirin-lexer.workspace = true
kirin-prettyless.workspace = true
kirin-chumsky-derive = { workspace = true, optional = true }

[features]
default = []
derive = ["kirin-chumsky-derive"]

[dev-dependencies]
insta.workspace = true
kirin-derive.workspace = true
