[package]
name = "kirin-chumsky"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky.workspace = true
kirin-ir.workspace = true
kirin-lexer.workspace = true
kirin-prettyless = { workspace = true, optional = true }
kirin-derive-chumsky = { workspace = true, optional = true }
num-traits.workspace = true
rustc-hash = "2.1.1"
strsim.workspace = true

[features]
default = ["pretty"]
pretty = ["kirin-prettyless"]
derive = ["kirin-derive-chumsky"]

[dev-dependencies]
insta.workspace = true
kirin.workspace = true
kirin-derive-ir.workspace = true
kirin-derive-chumsky.workspace = true
kirin-prettyless.workspace = true
kirin-test-utils = { workspace = true, features = ["parser", "pretty"] }
