[package]
name = "kirin-cmp"
version = "0.1.0"
edition = "2024"

[dependencies]
kirin.workspace = true
kirin-interpreter = { workspace = true }
kirin-interpreter-4 = { workspace = true }
kirin-interpreter-5 = { workspace = true }
kirin-interpreter-6 = { workspace = true }
kirin-interpreter-7 = { workspace = true }

[dev-dependencies]
kirin-test-types = { path = "../kirin-test-types" }
