[package]
name = "kirin-cmp"
version = "0.1.0"
edition = "2024"

[dependencies]
kirin.workspace = true
kirin-interpreter = { workspace = true }
kirin-interpreter-10 = { workspace = true }
kirin-interpreter-11 = { workspace = true }
kirin-interpreter-12 = { workspace = true }
kirin-interpreter-13 = { workspace = true }
kirin-interpreter-14 = { workspace = true }
kirin-interpreter-15 = { workspace = true }

[dev-dependencies]
kirin-test-types = { path = "../kirin-test-types" }
