[package]
name = "kirin-derive-chumsky"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
kirin-derive-toolkit = { version = "0.1.0", path = "../kirin-derive-toolkit" }
kirin-lexer = { workspace = true, features = ["quote"] }
chumsky.workspace = true
darling.workspace = true
indexmap = "2"
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
insta.workspace = true
kirin-test-utils.workspace = true
