[package]
name = "kirin-derive-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.8.1"
chumsky = "0.12.0"
darling = "0.23.0"
kirin-lexer = { version = "0.1.0", path = "../kirin-lexer", features = ["quote"] }
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"

[dev-dependencies]
insta = "1.44.3"

[features]
default = ["debug"]
debug = ["syn/extra-traits"]
