[package]
name = "kirin-derive-core"
version = "0.1.0"
edition = "2024"

[dependencies]
darling = "0.23.0"
manyhow = { version = "0.11.4", features = ["darling"] }
proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = { version = "2.0.113", features = ["extra-traits"] }

[dev-dependencies]
insta = "1.46.0"
