[package]
name = "kirin-derive"
version = "0.1.0"
edition = "2024"

[dependencies]
kirin-derive-core.workspace = true
kirin-derive-dialect.workspace = true
paste = "1.0"
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true

[dev-dependencies]
kirin-ir.workspace = true
kirin-test-utils.workspace = true