[package]
name = "kirin-function"
version = "0.1.0"
edition = "2024"

[dependencies]
kirin = { workspace = true }
kirin-interpreter = { workspace = true, optional = true }

[features]
interpret = ["kirin-interpreter"]

[dev-dependencies]
kirin-arith.workspace = true
kirin-test-languages = { workspace = true, features = ["parser"] }
kirin-test-utils = { workspace = true, features = ["roundtrip"] }
