[package]
name = "kirin-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
kirin-ir = { workspace = true, features = ["derive"] }
kirin-derive-interpreter = { workspace = true, optional = true }
fxhash = "0.2"
thiserror = { workspace = true }

[features]
derive = ["dep:kirin-derive-interpreter"]

[dev-dependencies]
kirin-arith = { workspace = true, features = ["interpret"] }
kirin-cf = { workspace = true, features = ["interpret"] }
kirin-constant = { workspace = true, features = ["interpret"] }
kirin-function = { workspace = true, features = ["interpret"] }
kirin-derive = { workspace = true }
kirin-derive-interpreter = { workspace = true }
kirin-test-utils = { workspace = true, features = ["interpreter"] }
