[package]
name = "kirin-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
kirin-ir = { workspace = true }
kirin-derive-interpreter = { workspace = true, optional = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[features]
derive = ["dep:kirin-derive-interpreter"]
