[package]
name = "kirin-interval"
version = "0.1.0"
edition = "2024"

[dependencies]
kirin-ir = { version = "0.1.0", path = "../kirin-ir", default-features = false }
kirin-arith = { workspace = true, optional = true }
kirin-bitwise = { workspace = true, optional = true }
kirin-cmp = { workspace = true, optional = true }
kirin-scf = { workspace = true, optional = true }

[dev-dependencies]
kirin-test-utils = { path = "../kirin-test-utils" }

[features]
default = []
arith = ["kirin-arith"]
bitwise = ["kirin-bitwise"]
cmp = ["kirin-cmp"]
scf = ["kirin-scf", "kirin-cmp"]
