[package]
name = "kirin-ir"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = "2.13.0"
kirin-derive-ir = { workspace = true, optional = true }
petgraph = { workspace = true }
rustc-hash = "2.1.1"
smallvec = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = ["derive"]
derive = ["dep:kirin-derive-ir"]
serde = ["dep:serde"]
