[package]
name = "kirin-prettyless"
version = "0.1.0"
edition = "2024"

[dependencies]
bat = { version = "0.26", optional = true, default-features = false, features = ["regex-fancy", "paging"] }
kirin-ir.workspace = true
kirin-derive-prettyless = { workspace = true, optional = true }
petgraph.workspace = true
prettyless = "0.3"
serde = { workspace = true, optional = true, features = ["derive"] }

[features]
default = ["serde"]
derive = ["dep:kirin-derive-prettyless"]
serde = ["dep:serde"]
bat = ["dep:bat"]

[dev-dependencies]
insta.workspace = true
kirin-test-languages = { workspace = true, features = ["simple-language", "ungraph-language"] }
